--- a/playbooks/roles/kubernetes/defaults/main.yml
+++ b/playbooks/roles/kubernetes/defaults/main.yml
@@ -70,4 +70,5 @@ kubernetes_flannel_manifest_file_rbac: https://raw.githubusercontent.com/coreos/
 kubernetes_flannel_manifest_file: https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 
 # Calico config files
-kubernetes_calico_manifest_file: https://projectcalico.docs.tigera.io/manifests/calico.yaml
+kubernetes_calico_tigera_operator: https://raw.githubusercontent.com/projectcalico/calico/v3.24.3/manifests/tigera-operator.yaml
+kubernetes_calico_manifest_file: https://raw.githubusercontent.com/projectcalico/calico/v3.24.3/manifests/custom-resources.yaml
