copy file with remote_src

--- a/playbooks/roles/kubernetes/tasks/master-setup.yml
+++ b/playbooks/roles/kubernetes/tasks/master-setup.yml
@@ -92,7 +92,6 @@
 
 - name: copy file
   copy: 
-    src: /etc/kubernetes/admin.conf
+    remote_src: /etc/kubernetes/admin.conf
     dest: $HOME/.kube/config
     owner: vagrant
-  delegate_to: localhost
