--- a/playbooks/roles/kubernetes/defaults/main.yml
+++ b/playbooks/roles/kubernetes/defaults/main.yml
@@ -9,8 +9,8 @@ kubernetes_packages:
   - name: kubernetes-cni
     state: present
 
-kubernetes_version: '1.20'
-kubernetes_version_rhel_package: '1.20.4'
+kubernetes_version: '1.21'
+kubernetes_version_rhel_package: '1.21.4'
 
 kubernetes_role: master
 
@@ -70,5 +70,5 @@ kubernetes_flannel_manifest_file_rbac: https://raw.githubusercontent.com/coreos/
 kubernetes_flannel_manifest_file: https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 
 # Calico config files
-kubernetes_calico_tigera_operator: https://raw.githubusercontent.com/projectcalico/calico/v3.24.3/manifests/tigera-operator.yaml
-kubernetes_calico_manifest_file: https://raw.githubusercontent.com/projectcalico/calico/v3.24.3/manifests/custom-resources.yaml
+kubernetes_calico_tigera_operator: https://raw.githubusercontent.com/projectcalico/calico/v3.23/manifests/tigera-operator.yaml
+kubernetes_calico_manifest_file: https://raw.githubusercontent.com/projectcalico/calico/v3.23/manifests/custom-resources.yaml
