--- a/playbooks/roles/kubernetes/tasks/master-setup.yml
+++ b/playbooks/roles/kubernetes/tasks/master-setup.yml
@@ -98,3 +98,13 @@
     owner: "{{ k8s_master_admin_user }}"
     group: "{{ k8s_master_admin_group }}"
     mode: 0660
+
+- name: Generate join command
+  command: kubeadm token create --print-join-command
+  when: kubernetes_role == 'master'
+  register: join_command
+  
+- name: Copy join command for {{ k8s_cluster_name }} cluster to local file
+  become: false
+  when: kubernetes_role == 'master'
+  local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./{{ k8s_cluster_name }}-join-command"
