--- a/playbooks/roles/kubernetes/tasks/master-setup.yml
+++ b/playbooks/roles/kubernetes/tasks/master-setup.yml
@@ -22,7 +22,7 @@
     kubeadm init
     --config {{ kubernetes_kubeadm_kubelet_config_file_path }}
     --ignore-preflight-errors={{ kubernetes_ignore_preflight_errors }}
-    --control-plane-endpoint {{ k8s_cp_ip }}
+    --control-plane-endpoint {{ k8s_cp_ip }}:6443
     --apiserver-advertise-address {{ k8s_cp_ip }}
     {{ kubernetes_kubeadm_init_extra_opts }}
   register: kubeadmin_init
