--- a/playbooks/roles/kubernetes/defaults/main.yml
+++ b/playbooks/roles/kubernetes/defaults/main.yml
@@ -70,5 +70,4 @@ kubernetes_flannel_manifest_file_rbac: https://raw.githubusercontent.com/coreos/
 kubernetes_flannel_manifest_file: https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 
 # Calico config files
-kubernetes_calico_tigera_operator: https://projectcalico.docs.tigera.io/archive/v3.23/manifests/tigera-operator.yaml
-kubernetes_calico_manifest_file: https://projectcalico.docs.tigera.io/archive/v3.23/manifests/custom-resources.yaml
+kubernetes_calico_manifest_file: kubectl create -f https://docs.projectcalico.org/manifests/calico.yaml
