--- a/playbooks/roles/kubernetes/defaults/main.yml
+++ b/playbooks/roles/kubernetes/defaults/main.yml
@@ -9,8 +9,8 @@ kubernetes_packages:
   - name: kubernetes-cni
     state: present
 
-kubernetes_version: '1.23.12'
-kubernetes_version_rhel_package: '1.23.12'
+kubernetes_version: k8s_version
+kubernetes_version_rhel_package: k8s_version
 
 kubernetes_role: master
 
