define k8s_version as env variable for both master and worker

--- a/playbooks/roles/kubernetes/defaults/main.yml
+++ b/playbooks/roles/kubernetes/defaults/main.yml
@@ -9,8 +9,8 @@ kubernetes_packages:
   - name: kubernetes-cni
     state: present
 
-kubernetes_version: k8s_version
-kubernetes_version_rhel_package: k8s_version
+kubernetes_version: "{{ k8s_version }}"
+kubernetes_version_rhel_package: "{{ k8s_version }}"
 
 kubernetes_role: master
 
