--- a/playbooks/roles/kubernetes/tasks/sysctl-setup.yml
+++ b/playbooks/roles/kubernetes/tasks/sysctl-setup.yml
@@ -7,6 +7,19 @@
     ansible_distribution != 'Debian'
     or ansible_distribution_major_version | int < 10
 
+- name: set ip forwarding on in /proc and in the sysctl file and reload
+  sysctl:
+    name: net.ipv4.ip_forward
+    value: '1'
+    sysctl_set: yes
+    state: present
+    reload: yes
+
+- name: Ensure br_netfilter is enabled.
+  modprobe:
+    name: br_netfilter
+    state: present
+
 # See: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/#letting-iptables-see-bridged-traffic
 - name: Let iptables see bridged traffic.
   sysctl:
