--- a/playbooks/roles/containerd/defaults/main.yml
+++ b/playbooks/roles/containerd/defaults/main.yml
@@ -1,7 +1,6 @@
 ---
 # Package options.
-containerd_package: containerd.io
-containerd_package_state: present
+containerd_package: containerd.io=1.6.15
 
 # Service options.
 containerd_service_state: started
