--- a/playbooks/roles/containerd/tasks/main.yml
+++ b/playbooks/roles/containerd/tasks/main.yml
@@ -34,7 +34,7 @@
 - name: Ensure containerd is installed.
   package:
     name: "{{ containerd_package }}"
-    state: "{{ containerd_package_state }}"
+    state: present
 
 - name: Ensure containerd is started and enabled at boot.
   service:
