change package module to apt

--- a/playbooks/roles/containerd/tasks/main.yml
+++ b/playbooks/roles/containerd/tasks/main.yml
@@ -32,7 +32,7 @@
     update_cache: true
 
 - name: Ensure containerd is installed.
-  package:
+  apt:
     name: "{{ containerd_package }}"
     state: present
 
