--- a/playbooks/roles/kubernetes/tasks/master-setup.yml
+++ b/playbooks/roles/kubernetes/tasks/master-setup.yml
@@ -84,7 +84,7 @@
 # TODO: Check if taint exists with something like `kubectl describe nodes`
 # instead of using kubernetes_init_stat.stat.exists check.
 #- name: Allow pods on master node (if configured).
-#  command: "kubectl taint nodes --all node-role.kubernetes.io/control-plane-"
+#  command: "kubectl taint nodes --all node-role.kubernetes.io/master-"
 #  when:
 #    - kubernetes_allow_pods_on_master | bool
 #    - not kubernetes_init_stat.stat.exists
