introduce post-installation script to install rook-ceph on k8s

--- a/playbooks/roles/kubernetes/tasks/main.yml
+++ b/playbooks/roles/kubernetes/tasks/main.yml
@@ -57,3 +57,7 @@
 
 - include_tasks: node-setup.yml
   when: kubernetes_role == 'node'
+
+# Install rook-ceph
+- include_tasks: post-installation.yml
+  when: kubernetes_role == 'master'
