Add post-installation support for helm chart installation

--- a/playbooks/roles/kubernetes/tasks/main.yml
+++ b/playbooks/roles/kubernetes/tasks/main.yml
@@ -57,3 +57,8 @@
 
 - include_tasks: node-setup.yml
   when: kubernetes_role == 'node'
+
+
+# Install post-installation
+- include_tasks: post-installation.yml
+  when: kubernetes_role == 'master'
